...
import cz.mendelu.pef.flashyflashcards.ui.elements.PlaceholderElement
import cz.mendelu.pef.flashyflashcards.ui.screens.ScreenErrors
import cz.mendelu.pef.flashyflashcards.ui.screens.destinations.WordCollectionsScreenDestination
import cz.mendelu.pef.flashyflashcards.ui.screens.destinations.WordsScreenDestination
import cz.mendelu.pef.flashyflashcards.ui.theme.basicMargin

const val TestTagCollectionNameTextField = "TestTagCollectionNameTextField"
const val TestTagCollectionSourceLanguageTextField = "TestTagCollectionSourceLanguageTextField"
const val TestTagCollectionSourceLanguageDropdown = "TestTagCollectionSourceLanguageDropdown"
const val TestTagCollectionTargetLanguageTextField = "TestTagCollectionTargetLanguageTextField"
const val TestTagCollectionTargetLanguageDropdown = "TestTagCollectionTargetLanguageDropdown"
const val TestTagCollectionSaveButton = "TestTagCollectionSaveButton"
const val TestTagCollectionDeleteButton = "TestTagCollectionDeleteButton"

@CollectionsNavGraph
@Destination
@Composable
fun AddEditWordCollectionScreen(
    navController: NavController,
...
