<resources>
    <string name="app_name">Flashy Flashcards</string>
    <string name="collections">Collections</string>
    <string name="explore">Explore</string>
    <string name="settings">Settings</string>
    <string name="navigation_icon_back">Back</string>
    <string name="welcome_screen_welcome_title">Welcome to Flashy</string>
    <string name="welcome_screen_welcome_text">An application that helps deepen your vocabulary with flashcards</string>
    <string name="welcome_screen_collections_text">Create your own collections, train and test your memory</string>
    <string name="welcome_screen_translation_title">Translation</string>
    <string name="welcome_screen_translation_text">Thanks to Google ML Kit you can quickly translate unknown word</string>
    <string name="continue_label">Continue</string>
    <string name="no_internet_connection">Unable to connect. Please check your internet connection.</string>
    <string name="explore_screen_info_text">Improve speaking by visiting cultural places</string>
    <string name="search_label">Search</string>
    <string name="category_label">Category</string>
    <string name="city_label">City</string>
    <string name="explore_screen_city_input_error">City must not be empty</string>
    <string name="city_not_found">City with specified name is not found.</string>
    <string name="unauthorized_access">Unauthorized access. Please check your API key.</string>
    <string name="unable_to_query">Unable to query the server. Please check your API key.</string>
    <string name="too_many_requests">Cannot query the server. Exceeded daily query quota.</string>
    <string name="server_error">The server received an internal error.</string>
    <string name="server_down">The server is currently down.</string>
    <string name="unknown_status_code">Unknown status code. Please send us a feedback.</string>
    <string name="exception">Application exception. Please send us a feedback.</string>
    <string name="yelp_logo">Yelp Logo</string>
    <string name="reviews">Reviews</string>
    <string name="detail">Detail</string>
    <string name="bookmark_label">Bookmark</string>
    <string name="yelp_link_text">Visit Yelp for more information</string>
    <string name="img_alt_bookmarks">Bookmarks</string>
    <string name="something_went_wrong_error">Something went wrong. Please try again.</string>
    <string name="route_fallback">Route</string>
    <string name="failed_to_resolve_position_turned_off_gps">Failed to resolve position: turned off GPS</string>
    <string name="failed_to_resolve_position_location_permission_denied">Failed to resolve position: location permission was denied</string>
    <string name="failed_to_get_position_please_try_again">Failed to get position, please, try again</string>
    <string name="add_label">Add</string>
    <string name="edit_collection">Edit collection</string>
    <string name="new_collection">New collection</string>
    <string name="delete_label">Delete</string>
    <string name="name_label">Name</string>
    <string name="source_language_label">Source language</string>
    <string name="target_language_label">Target language</string>
    <string name="save_label">Save</string>
    <string name="edit_label">Edit</string>
    <string name="empty_placeholder">Empty</string>
    <string name="word_collections_collection_error">Collection name must not be empty</string>
    <string name="word_collections_languages_error">Languages cannot be empty or the same</string>
    <string name="collection_dialog_title">Remove collection</string>
    <string name="collection_dialog_content">Are you sure you want to remove this collection? This will also erase all collection words.</string>
    <string name="dialog_dismiss_label">Cancel</string>
    <string name="dialog_remove_label">Remove</string>
    <string name="saved_to_bookmarks">Saved to bookmarks</string>
    <string name="removed_from_bookmarks">Removed from bookmarks</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="bookmarks_search_field_hint">Type city, category or place name to filter out</string>
    <string name="translation_label">Translation</string>
    <string name="translate_label">Translate</string>
    <string name="new_word">New word</string>
    <string name="edit_word">Edit word</string>
    <string name="unknown_error">Unknown error, please, send us a feedback.</string>
    <string name="words_name_error">Name must not be empty</string>
    <string name="words_translation_error">Translation must not be empty</string>
    <string name="failed_to_translate_word">Failed to translate, try again</string>
    <string name="failed_to_download_language_model">Failed to download translator, try again</string>
    <string name="translate_note">NOTE: To translate a word using MLKit, you need to download the languages (Wi-Fi required). You can manage them in the settings.</string>
    <string name="training_label">Training</string>
    <string name="answer_label">Answer</string>
    <string name="next_label">Next</string>
    <string name="flashcard_hint">If you can\'t remember, tap on a card for a hint</string>
    <string name="incorrect_answer">Wrong, tap on a card for a hint</string>
    <string name="test_label">Test</string>
    <string name="test_history_label">Test history</string>
    <string name="test_history_detail_label">Test history detail</string>
    <string name="more_label">More</string>
    <string name="terminate_test">Terminate test</string>
    <string name="training_finished">Training finished!</string>
    <string name="test_finished">Test finished!</string>
    <string name="repeat_label">Repeat</string>
    <string name="save_test_history_label">Save and repeat</string>
    <string name="number_of_correct_answers">Number of correct answers</string>
    <string name="date_of_completion">Date of completion</string>
    <string name="time_taken">Time taken</string>
    <string name="seconds">seconds</string>
    <string name="word">Word</string>
    <string name="correct_answer">Correct answer</string>
    <string name="your_answer">Your answer</string>
    <string name="failed_to_fetch_test_history">Failed to fetch history. Please send us a feedback.</string>
    <string name="test_history_dialog_title">Remove test history record</string>
    <string name="test_history_dialog_content">Are you sure you want to remove this record? This action is permanent.</string>
    <string name="application_version">Application version</string>
    <string name="cancel_label">Cancel</string>
    <string name="theme_light">Light</string>
    <string name="theme_dark">Dark</string>
    <string name="language_en">English</string>
    <string name="language_cs">Czech</string>
    <string name="test_length_5">5 seconds</string>
    <string name="test_length_10">10 seconds</string>
    <string name="test_length_15">15 seconds</string>
    <string name="test_length_20">20 seconds</string>
    <string name="app_language">App language</string>
    <string name="app_theme">App theme</string>
    <string name="test_answer_length">Test answer length</string>
    <string name="all_categories">All</string>
    <string name="language_schools_category">Language Schools</string>
    <string name="libraries_category">Libraries</string>
    <string name="cultural_centers_category">Cultural Centers</string>
    <string name="museums_category">Museums</string>
    <string name="art_galleries_category">Art Galleries</string>
    <string name="failed_to_refresh_business_try_again">Failed to refresh data, try again later</string>
    <string name="translation_languages">Languages</string>
    <string name="downloaded_languages">Downloaded languages</string>
    <string name="failed_to_get_downloaded_languages">Failed to load downloaded languages, try again.</string>
    <string name="failed_to_delete_downloaded_language">Failed to delete language, try again</string>
</resources>