...
import cz.mendelu.pef.flashyflashcards.ui.elements.LoadingScreenCircleIndicator
import cz.mendelu.pef.flashyflashcards.ui.elements.PlaceholderElement
import cz.mendelu.pef.flashyflashcards.ui.screens.ScreenErrors
import cz.mendelu.pef.flashyflashcards.ui.theme.basicMargin
import cz.mendelu.pef.flashyflashcards.ui.theme.halfMargin

const val TestTagWordNameTextField = "TestTagWordNameTextField"
const val TestTagWordTranslationTextField = "TestTagWordTranslationTextField"
const val TestTagSaveWordButton = "TestTagSaveWordButton"
const val TestTagDeleteWordButton = "TestTagDeleteWordButton"

@CollectionsNavGraph
@Destination
@Composable
fun AddEditWordScreen(
    navController: NavController,
...
