...
import cz.mendelu.pef.flashyflashcards.ui.elements.PlaceholderElement
import cz.mendelu.pef.flashyflashcards.ui.screens.ScreenErrors
import cz.mendelu.pef.flashyflashcards.ui.screens.destinations.AddEditWordCollectionScreenDestination
import cz.mendelu.pef.flashyflashcards.ui.screens.destinations.WordsScreenDestination
import cz.mendelu.pef.flashyflashcards.ui.theme.basicMargin

const val TestTagCollectionsLazyColumn = "TestTagCollectionsLazyColumn"
const val TestTagAddCollectionButton = "TestTagAddCollectionButton"

@CollectionsNavGraph(start = true)
@Destination
@Composable
fun WordCollectionsScreen(
    navController: NavController,
...
